# music_store_assistant

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEMO_CHAT.md  LICENSE  OTEL_IMPLEMENTATION.md  README.md  TALK_TRACK.md  agent.ipynb  langgraph.json  llm_o11y_dashboard.json  pyproject.toml  pyrightconfig.json  terminal_test.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
demo/: DEMO_PREP.md  LIGHTNING_TALK.md  README.md  SPEAKER_NOTES.md  TALK_CHEATSHEET.md  continuous_traffic.py  generate_long_conversations.py  generate_traffic.py  preflight_check.sh  slides.md  start_demo.sh  stop_demo.sh
evals/: README.md  __init__.py
evals/datasets/: __init__.py  create_datasets.py  golden_examples.json
evals/evaluators/: __init__.py  custom.py  llm_judge.py
evals/experiments/: __init__.py  run_model_comparison.py  run_pairwise.py
scripts/: report_test_costs.py
src/: __init__.py  api.py  cli.py  graph.py  otel.py  state.py  utils.py
src/tools/: __init__.py  music.py  support.py
static/: admin.html  index.html
tests/: __init__.py  conftest.py  test_api.py  test_api_hitl_flow.py  test_demo_flow.py  test_graph.py  test_model_factory.py  test_music_tools.py  test_refund_confirmation_flow.py  test_state.py  test_support_tools.py
