[project]
name = "music-store-assistant"
version = "0.1.0"
description = "Customer Support Bot for Algorhythm Music Store - LangGraph Demo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "langchain-google-genai>=3.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "langgraph-cli[inmem]>=0.4.7",
    "langchain-anthropic>=1.2.0",
    "langchain-deepseek>=1.0.1",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "openinference-instrumentation-openai>=0.1.41",
    "openinference-semantic-conventions>=0.1.25",
    "openinference-instrumentation-langchain>=0.1.56",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.7",
]
